// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should render a checked selector 1`] = `
.circuit-4 {
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label {
  background-color: #EDF4FC;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 2px 2px 0 rgba(12,15,20,0.06), 0 4px 4px 0 rgba(12,15,20,0.06);
}

.circuit-0:checked + label::before {
  border: 2px solid #3388FF;
}

.circuit-2 {
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 0 1px 0 rgba(12,15,20,0.06), 0 2px 2px 0 rgba(12,15,20,0.06);
  display: block;
  cursor: pointer;
  padding: 24px;
  border-radius: 5px;
  background-color: #FFFFFF;
  text-align: center;
}

.circuit-2::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 5px;
  border: 1px solid #9DA7B1;
}

.circuit-2:hover {
  background-color: #FAFBFC;
}

.circuit-2:hover::before {
  border: 2px solid #9DA7B1;
}

<div
  class="circuit-4 circuit-5"
>
  <input
    checked=""
    class="circuit-0 circuit-1"
    id="selector_3"
    name="name"
    type="radio"
    value="value"
  />
  <label
    class="circuit-2 circuit-3"
    for="selector_3"
  >
    Label
  </label>
</div>
`;

exports[`Selector should render a default selector 1`] = `
.circuit-4 {
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label {
  background-color: #EDF4FC;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 2px 2px 0 rgba(12,15,20,0.06), 0 4px 4px 0 rgba(12,15,20,0.06);
}

.circuit-0:checked + label::before {
  border: 2px solid #3388FF;
}

.circuit-2 {
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 0 1px 0 rgba(12,15,20,0.06), 0 2px 2px 0 rgba(12,15,20,0.06);
  display: block;
  cursor: pointer;
  padding: 24px;
  border-radius: 5px;
  background-color: #FFFFFF;
  text-align: center;
}

.circuit-2::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 5px;
  border: 1px solid #9DA7B1;
}

.circuit-2:hover {
  background-color: #FAFBFC;
}

.circuit-2:hover::before {
  border: 2px solid #9DA7B1;
}

<div
  class="circuit-4 circuit-5"
>
  <input
    class="circuit-0 circuit-1"
    id="selector_1"
    name="name"
    type="radio"
    value="value"
  />
  <label
    class="circuit-2 circuit-3"
    for="selector_1"
  >
    Label
  </label>
</div>
`;

exports[`Selector should render a disabled selector 1`] = `
.circuit-4 {
  position: relative;
  margin-bottom: 16px;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.circuit-0:focus + label::before {
  outline: 0;
  box-shadow: 0 0 0 4px #AFD0FE;
}

.circuit-0:focus + label::before::-moz-focus-inner {
  border: 0;
}

.circuit-0:checked + label {
  background-color: #EDF4FC;
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 2px 2px 0 rgba(12,15,20,0.06), 0 4px 4px 0 rgba(12,15,20,0.06);
}

.circuit-0:checked + label::before {
  border: 2px solid #3388FF;
}

.circuit-2 {
  box-shadow: 0 0 0 1px rgba(12,15,20,0.02), 0 0 1px 0 rgba(12,15,20,0.06), 0 2px 2px 0 rgba(12,15,20,0.06);
  display: block;
  cursor: pointer;
  padding: 24px;
  border-radius: 5px;
  background-color: #FFFFFF;
  text-align: center;
  color: #9DA7B1;
  cursor: default;
  pointer-events: none;
}

.circuit-2::before {
  display: block;
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border-radius: 5px;
  border: 1px solid #9DA7B1;
}

.circuit-2:hover {
  background-color: #FAFBFC;
}

.circuit-2:hover::before {
  border: 2px solid #9DA7B1;
}

.circuit-2::before {
  border-color: #D8DDE1;
}

<div
  class="circuit-4 circuit-5"
>
  <input
    class="circuit-0 circuit-1"
    disabled=""
    id="selector_2"
    name="name"
    type="radio"
    value="value"
  />
  <label
    class="circuit-2 circuit-3"
    disabled=""
    for="selector_2"
  >
    Label
  </label>
</div>
`;
